# dbReadCv

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
db/: db.sql
include/: car.hpp  client.hpp  communicator.hpp  cvlib.hpp  features.hpp  gamepad.hpp  lib.hpp  server.hpp  xbctrl.hpp
src/: nnw.cpp  read.cpp
src/lib/: car.cpp  client.cpp  communicator.cpp  cvlib.cpp  features.cpp  gamepad.cpp  lib.cpp  server.cpp
src/main/: carClient.cpp  control.cpp  gpcontrol.cpp  nncontrol.cpp  nnw.cpp  watch.cpp
test/: CommunicatorTest.cpp  LibTest.cpp  main.cpp
